--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+#spring.jpa.hibernate.ddl-auto can be none, update, create, or create-drop.
+#none: The default for MySQL. No change is made to the database structure.
+#update: Hibernate changes the database according to the given entity structures.
+#create: Creates the database every time but does not drop it on close.
+#create-drop: Creates the database and drops it when SessionFactory closes.
+#This property is used to customize the Hibernate database schema
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jpa
+spring.datasource.username=root
+spring.datasource.password=Bandara123@
 
+#The dialect specifies the type of database used in hibernate
+# so that hibernate generate appropriate type of SQL statements.
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql =true
